--- a/package.json
+++ b/package.json
@@ -3,6 +3,13 @@
   "version": "1.0.2",
   "description": "Low level internal utilities to be shared amongst Eleventy projects",
   "main": "index.js",
+  "files": [
+    "src",
+    "src/**",
+    "index.js",
+    "!test",
+    "!test/**"
+  ],
   "scripts": {
     "test": "npx ava --verbose"
   },
