--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Low level internal utilities to be shared amongst Eleventy projects",
   "main": "index.js",
   "scripts": {
-    "test": "npx ava --verbose"
+    "test": "node --test"
   },
   "license": "MIT",
   "engines": {
-    "node": ">=12"
+    "node": ">=18"
   },
   "funding": {
     "type": "opencollective",
@@ -33,8 +33,5 @@
   "homepage": "https://github.com/11ty/eleventy-utils/",
   "dependencies": {
     "normalize-path": "^3.0.0"
-  },
-  "devDependencies": {
-    "ava": "^4.1.0"
   }
 }
