--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@11ty/eleventy-utils",
-  "version": "1.0.3",
+  "version": "2.0.0-alpha.1",
   "description": "Low level internal utilities to be shared amongst Eleventy projects",
   "main": "index.js",
   "files": [
