Adds DateCompare utility for use by Fetch and Import for cache durations

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "!test/**"
   ],
   "scripts": {
-    "test": "node --test"
+    "test": "node --test",
+    "watch": "node --test --watch"
   },
   "license": "MIT",
   "engines": {
