--- a/utils/package.json
+++ b/utils/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@11ty/eleventy-utils",
-  "version": "2.0.7",
+  "version": "2.0.8-alpha.1",
   "description": "Low level internal utilities to be shared amongst Eleventy projects",
   "main": "index.js",
   "files": [
