--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,6 +22,6 @@ jobs:
       - if: ${{ github.event.release.tag_name != '' && env.NPM_PUBLISH_TAG != '' && env.NPM_WORKSPACE != '' }}
         run: npm publish --provenance --access=public --tag=${{ env.NPM_PUBLISH_TAG }} --workspace=${{ env.NPM_WORKSPACE }}
         env:
-          NPM_PUBLISH_TAG: ${{ contains(github.event.release.tag_name, '-alpha.') && 'canary' || 'latest' }}
+          NPM_PUBLISH_TAG: ${{ contains(github.event.release.tag_name, '-alpha.') && 'canary' || contains(github.event.release.tag_name, '-beta.') && 'beta' || 'latest' }}
           # tag names must be formatted like utils@1.0.0
-          NPM_WORKSPACE: ${{ startsWith(github.event.release.tag_name, 'utils@') && 'utils' || startsWith(github.event.release.tag_name, 'node-version-check@') && 'node-version-check' }}
+          NPM_WORKSPACE: ${{ startsWith(github.event.release.tag_name, 'utils@') && 'utils' || startsWith(github.event.release.tag_name, 'node-version-check@') && 'node-version-check' || startsWith(github.event.release.tag_name, 'parse-deps-typescript@') && 'parse-deps-typescript' || startsWith(github.event.release.tag_name, 'parse-deps-esm@') && 'parse-deps-esm' }}
